refactor(jpa): 重构条件构建器接口实现
- 将 AbstractBulkOperationSpec 实现 ConditionalMethods 接口
- 移除重复的条件便捷方法，统一通过接口提供
- 更新 like 和 notLike 方法为包含匹配和不包含匹配
- 优化 AuditEntityListener 中的 provider 查找逻辑
- 移除 BaseEntity 中的版本字段默认值
- 从 CHANGELOG 中移除多租户支持功能说明
- 将 ConditionBuilder 的安全函数白名单设为不可变集合
- 移除运行时修改安全函数白名单的功能
- 移除废弃的别名方法如 likeRight、likeLeft 等
- 统一条件方法的 @Override 注解添加